[runtime] Improve the life cycle of the statements with a more robust protocol.